--- a/src/style.css
+++ b/src/style.css
@@ -1,21 +1,35 @@
 h1, h2, h3, h4, h5, p {
     margin: 0;
+    margin-block-start: 0;
+    margin-block-end: 0;
 }
 
 body {
     display: flex;
     justify-content: center;
+    background-color: aquamarine;
+    height: 100vh;
+    background-size: cover;
+    align-items: flex-start;
 }
 .content {
     display: grid;
     grid-template-columns: 40vw 40vw;
-    margin-top: 5vw;
-    grid-template-rows:48px 1fr 1fr 1fr;
+    margin-top: 5vh;
+    grid-template-rows: 32px 1fr 1fr 1fr;
+    color: azure;
+    padding: 5vw;
+    border-radius: 3rem;
+    background-color: rgb(0, 0, 0, 0.7);
 }
 
 #searchContainer {
     grid-column: span 2;
     justify-self: center;
+}
+
+#searchInput {
+    margin-right: 5vw;
 }
 
 #tempContainer {
@@ -27,7 +41,16 @@ body {
 h1 {
     align-self: center;
     justify-self: center;
-    font-size: 20vw;
+    font-size: 4rem;
+}
+
+h2 {
+    font-size: 2rem;
+}
+
+h2, h3, h4 {
+    justify-self: center;
+    align-self: center;
 }
 
 #iconConditionContainer {
@@ -36,7 +59,7 @@ h1 {
 }
 
 #conditionText {
-
+    margin-top: 0;
     text-align: center;
 
 }
@@ -44,10 +67,28 @@ h1 {
 #conditionIcon {
     align-self: center;
     justify-self: center;
-    width: 20vw;
+
 }
 
 #locationContainer {
     grid-row-start: 3;
+    grid-column: span 2;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    text-align: center;
+}
+
+p {
+    margin-top: 1vh;
+    text-align: center;
+    font-size: 1rem;
+}
+
+#locationName {
+    grid-column: span 2;
+}
+
+#countryName {
     grid-column: span 2;
 }
