--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,13 @@ h1, h2, h3, h4, h5, p {
     margin-block-end: 0;
 }
 
+button {
+    border: 0;
+    padding: 0.175rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+
+}
 body {
     display: flex;
     justify-content: center;
