added DOM creation and population for weekly forecast Day, Icon, min and max temp C, might add rain % to this sectoin

--- a/src/style.css
+++ b/src/style.css
@@ -99,3 +99,16 @@ p {
 #countryName {
     grid-column: span 2;
 }
+
+.forecastContainer {
+    display: flex;
+    justify-content: space-between;
+}
+.forecastDayContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.forecastDayIcon {
+    width: 11vw;
+}
